--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "practica",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
@@ -16,8 +17,10 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.7",
     "framer-motion": "^12.0.6",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.5",
     "next": "15.1.6",
+    "nodemailer": "^6.10.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
